package protofile.controller.addVideo;

message addVideoRequest{
    required string videoId=1;
    required string gameType=2;
    required int32 betTime=3;
    required string url=4;
}

message addVideoResponse{
    required uint32 code=1;
}

