package protofile.controller.modifyTableLimit;

message modifyTableLimitRequest{
    required string limitId = 1;
    required uint32 num = 2;
    repeated tableLimit tableLimit = 3;
}

message tableLimit{
    required uint32 playtype = 1;
    required uint32 minval_cents = 2;
    required uint32 maxval_cents = 3;
}
